--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -23,6 +23,12 @@
       }
     </style>
   </head>
+  <script>
+    let js='Awsome';
+    if (js=='Awsome') alert("Have Fun!!")
+
+    console.log(20+10-10)
+  </script>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
   </body>
