--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -23,12 +23,15 @@
       }
     </style>
   </head>
-  <script>
+  <script src="script.js"></script>
+
+  <!-- this script here is inline -->
+  <!-- <script>
     let js='Awsome';
     if (js=='Awsome') alert("Have Fun!!")
 
     console.log(20+10-10)
-  </script>
+  </script> -->  
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
   </body>
