--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -33,6 +33,7 @@
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="CodingChallenge.js"></script>
   </body>
 </html>
