--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -29,11 +29,11 @@
     if (js=='Awsome') alert("Have Fun!!")
 
     console.log(20+10-10)
-  </script> -->  
+  </script> -->
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
 
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
     <script src="CodingChallenge.js"></script>
   </body>
 </html>
