--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -34,6 +34,7 @@
     <h1>JavaScript Fundamentals – Part 1</h1>
 
     <script src="script.js"></script>
-    <script src="CodingChallenge.js"></script>
+    <!-- <script src="CodingChallenge.js"></script> -->
+    <script src="CodingChallenge2.js"></script>
   </body>
 </html>
