--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -35,6 +35,7 @@
 
     <script src="script.js"></script>
     <!-- <script src="CodingChallenge.js"></script> -->
-    <script src="CodingChallenge2.js"></script>
+    <!-- <script src="CodingChallenge2.js"></script> -->
+     <script src="CodingChallenge3.js"></script>
   </body>
 </html>
