--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -36,6 +36,7 @@
     <script src="script.js"></script>
     <!-- <script src="CodingChallenge.js"></script> -->
     <!-- <script src="CodingChallenge2.js"></script> -->
-     <script src="CodingChallenge3.js"></script>
+     <!-- <script src="CodingChallenge3.js"></script> -->
+     <script src="CodingChallenge4.js"></script>
   </body>
 </html>
