--- a/02-Fundamentals-Part-2/starter/index.html
+++ b/02-Fundamentals-Part-2/starter/index.html
@@ -28,5 +28,6 @@
     <script src="script.js"></script>
     <!-- <script src="codingChallenge1.js"></script> -->
      <!-- <script src="codingChallenge.js"></script> -->
+      <script src="codinfgChallenge3.js"></script>
   </body>
 </html>
