--- a/02-Fundamentals-Part-2/starter/index.html
+++ b/02-Fundamentals-Part-2/starter/index.html
@@ -29,5 +29,6 @@
     <!-- <script src="codingChallenge1.js"></script> -->
      <!-- <script src="codingChallenge.js"></script> -->
       <!-- <script src="codinfgChallenge3.js"></script> -->
+       <script src="codingChallenge4.js"></script>
   </body>
 </html>
