--- a/04-HTML-CSS/Starter/index.html
+++ b/04-HTML-CSS/Starter/index.html
@@ -3,21 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
     <title>My Webpage</title>
   </head>
   <body>
-    <h1 style="text-align: center">JavaScript is fun, but so in HTML & CSS</h1>
-    <p style="text-align: center">
-      You can learn JavaScript without HTML and CSS, but for DOM manipulation
-      it's useful to have some basic ideas of HTML & CSS. You can learn more
-      about it.
-
-      <a href="index.html">Click Me</a>
-    </p>
-    <h2>Another Heading</h2>
-    <p>Another paragraph</p>
-    <img
-      src="https://images.unsplash.com/photo-1738831920727-73e17adc5b87?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-    />
+    <div class="container">
+      <img
+        src="https://images.unsplash.com/photo-1738831920727-73e17adc5b87?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="Stunning Scenery"
+      />
+      <div class="content">
+        <h1>Welcome to a Beautiful View</h1>
+        <a href="#" class="btn">Explore More</a>
+      </div>
+    </div>
   </body>
 </html>
