--- a/01-Fundamentals-Part-1/Assignment/index.html
+++ b/01-Fundamentals-Part-1/Assignment/index.html
@@ -27,6 +27,7 @@
     <h1>JavaScript Fundamentals – Part 1</h1>
 
     <!-- <script src="pg1/pg1.js"></script> -->
-    <script src="pg2/pg2.js"></script>
+    <!-- <script src="pg2/pg2.js"></script> -->
+    <script src="pg3/pg3.js"></script>
   </body>
 </html>
