--- a/01-Fundamentals-Part-1/Assignment/index.html
+++ b/01-Fundamentals-Part-1/Assignment/index.html
@@ -28,6 +28,7 @@
 
     <!-- <script src="pg1/pg1.js"></script> -->
     <!-- <script src="pg2/pg2.js"></script> -->
-    <script src="pg3/pg3.js"></script>
+    <!-- <script src="pg3/pg3.js"></script> -->
+    <script src="pg4/pg4.js"></script>
   </body>
 </html>
